--- a/default.css
+++ b/default.css
@@ -573,3 +573,11 @@
 		font-size: 3em;
 	}
 
+
+	input[type="text"] {
+		width: 300px;
+		display: block;
+		font-size: 14pt;
+		margin-bottom: 10px;
+		background-color: white;
+	}
