--- a/default.css
+++ b/default.css
@@ -573,7 +573,7 @@
 		font-size: 3em;
 	}
 
-
+/*
 	input[type="text"] {
 		width: 300px;
 		display: block;
@@ -582,3 +582,4 @@
 		background-color: white;
 		align-self: center;
 	}
+*/
