--- a/default2.css
+++ b/default2.css
@@ -66,7 +66,7 @@
 	{
 		/* overflow: hidden; */
 		margin: 0em auto;
-		width: 1000px;
+		width: auto;
 	}
 
 /*********************************************************************************/
@@ -440,7 +440,7 @@
 	{
 		margin-top: 2em;
 		display: inline-block;
-		text-align: center;
+		text-align: left;
 	}
 
 /*********************************************************************************/
@@ -557,7 +557,7 @@
 
 	#extra .title
 	{
-		text-align: center;
+		text-align: left;
 	}
 
 	#extra .button
